Start work on spawn last generator