@@ -11,7 +11,6 @@ import com.faforever.neroxis.util.vector.Vector3;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 public class MapMaskMethods {
     private MapMaskMethods() {
@@ -26,7 +25,7 @@ public class MapMaskMethods {
         List<Spawn> startTeamSpawns = map.getSpawns()
                                          .stream()
                                          .filter(spawn -> spawn.getTeamID() == 0)
-                                         .collect(Collectors.toList());
+                                         .toList();
         for (int i = 0; i < numConnections; ++i) {
             Spawn startSpawn = startTeamSpawns.get(random.nextInt(startTeamSpawns.size()));
             int numMiddlePoints;
@@ -53,7 +52,7 @@ public class MapMaskMethods {
         List<Spawn> startTeamSpawns = map.getSpawns()
                                          .stream()
                                          .filter(spawn -> spawn.getTeamID() == 0)
-                                         .collect(Collectors.toList());
+                                         .toList();
         return exec.enqueue(() -> {
             Random random = new Random(seed);
             for (int i = 0; i < numConnections; ++i) {
@@ -86,7 +85,7 @@ public class MapMaskMethods {
         List<Spawn> startTeamSpawns = map.getSpawns()
                                          .stream()
                                          .filter(spawn -> spawn.getTeamID() == 0)
-                                         .collect(Collectors.toList());
+                                         .toList();
         return exec.enqueue(() -> {
             Random random = new Random(seed);
             if (startTeamSpawns.size() > 1) {
@@ -172,12 +171,10 @@ public class MapMaskMethods {
     @GraphMethod
     @GraphParameter(name = "map", value = "map")
     public static BooleanMask fillSpawnCircle(SCMap map, BooleanMask exec, float radius) {
-        return exec.enqueue(() -> {
-            map.getSpawns().forEach(spawn -> {
-                Vector3 location = spawn.getPosition();
-                exec.fillCircle(location, radius, true);
-            });
-        });
+        return exec.enqueue(() -> map.getSpawns().forEach(spawn -> {
+            Vector3 location = spawn.getPosition();
+            exec.fillCircle(location, radius, true);
+        }));
     }
 
     @GraphMethod
